[package]
name = "warframe-exports"
version = "0.1.0"
edition = "2021"

[dependencies]
lzma-rs = { version = "0.3.0" }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
regex = "1.11.1"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
